--- a/package.json
+++ b/package.json
@@ -5,7 +5,25 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name xui --dest lib packages/index.js"
+  },
+  "description": "An enterprise-class UI design language and Vue components implementation",
+  "keywords": [
+    "component",
+    "components",
+    "design",
+    "framework",
+    "frontend",
+    "vue",
+    "vue-component",
+    "ui",
+    "郑兴"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zxxxx-hsb/zxxx-ui"
   },
   "dependencies": {
     "core-js": "^3.8.3",
