--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "zxxx-ui",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.1",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lib": "vue-cli-service build --target lib --name xui --dest lib packages/index.js"
+    "lib": "vue-cli-service build --target lib --name zxui --dest lib packages/index.js"
   },
+  "contributors": [
+    "zhengxing"
+  ],
+  "main": "lib/zxui.umd.min.js",
   "description": "An enterprise-class UI design language and Vue components implementation",
   "keywords": [
     "component",
