--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "svg-sprite-loader": "^6.0.11",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -41,6 +42,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
